fix twitter alignment

--- a/dev/css/main.sass
+++ b/dev/css/main.sass
@@ -127,8 +127,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6
 
 .tweet_text
     direction: ltr
+    text-align: left
 .lang_fa
     direction: rtl
+    text-align: right
 .avatar
     height: 50px
     width: 50px
